# Navigating-the-Pok-mon-Maze-with-TurtleBot

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: car.pc  car_control.pc  car_gazebo.pc  multi_robot_sim.pc  racebot_control.pc  racebot_description.pc  racebot_gazebo.pc  test.pc  tianbot_mini.pc  tianbot_mini_description.pc  tianracer_description.pc
src/car/: CMakeLists.txt
src/car/config/: joint_names_car.yaml  smart_control_config.yaml
src/car/launch/: display.launch  gazebo.launch  mycar.launch
src/car/meshes/: base_turn.STL  body.STL  camera.STL  front_wheel_L.STL  front_wheel_L1.STL  front_wheel_R.STL  front_wheel_R1.STL  rear_wheel_L.STL  rear_wheel_R.STL
src/car/rviz_config/: mycar.rviz
src/car/scripts/: cmdvei2gazebo.py
src/car/urdf/: car.urdf  macros.xacro  mycar.gazebo  mycar.urdf  mycar.xacro
src/car_control/config/: mycar_control.yaml
src/car_control/launch/: mycar_control.launch
src/car_control/scripts/: car_servo_commends.py  cmd_transform.py  gazebo_odometry.py  get_depth.py
src/car_gazebo/: CMakeLists.txt  package.xml
src/car_gazebo/config/: keyboard_teleop.yaml
src/car_gazebo/launch/: amcl.launch  demo.launch  mycar.launch  slam_gmapping.launch  teb_base.launch
src/car_gazebo/map/: new_house.pgm  new_house.yaml  robot_map.pgm  robot_map.yaml
src/car_gazebo/rviz/: car_setting.rviz  nav.rviz
src/car_gazebo/scripts/: keyboard_teleop.py
src/car_gazebo/src/: real_sensors.cpp
src/car_gazebo/worlds/: new_house.world  robot_house.world  slap.world
(+13 files in other folders)
